Minor code quality improvements